--- a/src/components/table-body/index.less
+++ b/src/components/table-body/index.less
@@ -5,12 +5,19 @@
   overflow: hidden;
 }
 
-.row {
+.row,
+.border_row {
   display: flex;
   align-items: center;
   position: absolute;
   width: 100%;
 }
+
+.border_row {
+  height: 100%;
+  pointer-events: none;
+}
+
 
 .cell {
   position: relative;
@@ -18,7 +25,7 @@
   align-items: center;
   border-right: 1px solid #f0f0f0;
   height: 100%;
-  color: rgba(0,0,0,0.65);
+  color: rgba(0, 0, 0, 0.65);
   user-select: none;
   padding: 0 8px;
 }
