feat: 增加回到顶部配置

--- a/src/components/scroll-top/index.less
+++ b/src/components/scroll-top/index.less
@@ -1,11 +1,12 @@
 .scroll_top {
   position: absolute;
-  right: 20px;
-  bottom: 20px;
-  width: 50px;
-  height: 50px;
+  right: 24px;
+  bottom: 8px;
+  width: 40px;
+  height: 40px;
   cursor: pointer;
   background-image: url('./Top.svg');
+  background-size: contain;
 
   &:hover {
     background-image: url('./Top_hover.svg');
