--- a/src/Gantt.less
+++ b/src/Gantt.less
@@ -1,4 +1,5 @@
 .body {
+
   height: 100%;
   width: 100%;
   display: flex;
@@ -7,6 +8,12 @@
   border: 1px solid #f0f0f0;
   border-radius: 4px;
   background: #fff;
+
+  *,
+  *::before,
+  *::after {
+    box-sizing: border-box;
+  }
 
   header {
     position: relative;
