--- a/src/components/divider/index.less
+++ b/src/components/divider/index.less
@@ -10,7 +10,7 @@
   position: absolute;
   border-top: 7px solid white;
   border-bottom: 7px solid white;
-  background: #5365EA;
+  background: #A7ADD0;
   z-index: 2;
   height: 26px;
   top: 50%;
@@ -20,6 +20,10 @@
 
 .divider:hover hr {
   border-color: #5365EA;
+
+  &:before {
+    background: #5365EA;
+  }
 }
 
 .divider:hover .icon-wrapper {
@@ -57,7 +61,7 @@
 }
 
 .divider_only > hr {
-  border-color: #5365EA;
+  border-color: #A7ADD0;
 }
 
 .divider > .icon-wrapper {
