feat: 关闭css modules

--- a/src/components/chart/index.less
+++ b/src/components/chart/index.less
@@ -1,17 +1,19 @@
-.chart {
+@import '../../style/themes/index';
+
+.@{gantt-prefix}-chart {
   position: absolute;
   top: 0;
   overflow-x: hidden;
   overflow-y: hidden;
 }
 
-.chart-svg-renderer {
+.@{gantt-prefix}-chart-svg-renderer {
   position: absolute;
   top: 0;
   left: 0;
 }
 
-.render-chunk {
+.@{gantt-prefix}-render-chunk {
   position: absolute;
   top: 0;
   left: 0;
