--- a/src/components/group-bar/index.less
+++ b/src/components/group-bar/index.less
@@ -1,10 +1,12 @@
-.group-bar {
+@import '../../style/themes/index';
+
+.@{gantt-prefix}-group-bar {
   position: absolute;
   top: 0;
   left: 0;
   display: flex;
 
-  & .bar {
+  & .@{gantt-prefix}-bar {
     position: relative;
     top: -3px;
   }
