--- a/src/components/scroll-top/index.less
+++ b/src/components/scroll-top/index.less
@@ -1,4 +1,7 @@
-.scroll_top {
+@import '../../style/themes/index';
+@scroll-top-prefix-cls: ~'@{gantt-prefix}-scroll_top';
+
+.@{scroll-top-prefix-cls} {
   position: absolute;
   right: 24px;
   bottom: 8px;
