--- a/src/components/task-bar/index.less
+++ b/src/components/task-bar/index.less
@@ -1,10 +1,13 @@
-.task-bar {
+@import '../../style/themes/index';
+@task-bar-prefix-cls: ~'@{gantt-prefix}-task-bar';
+
+.@{task-bar-prefix-cls} {
   position: absolute;
   top: 0;
   left: 0;
   display: flex;
 
-  .loading {
+  &-loading {
     position: absolute;
     top: 0;
     bottom: 0;
@@ -14,7 +17,7 @@
     z-index: 9;
   }
 
-  & .bar {
+  &-bar {
     position: relative;
     height: 8px;
     line-height: 8px;
@@ -23,232 +26,148 @@
     cursor: pointer;
   }
 
-  .dependency-handle {
-    position: absolute;
-    top: -5px;
-    left: 0;
-    cursor: pointer;
-    height: 18px;
-    z-index: 1;
+  &-invalid-date-range {
+    display: none;
+  }
 
-    &:hover {
-      .inner {
-        fill: #1b9aee
+
+  &-resize-bg {
+    position: absolute;
+    left: 0;
+    top: -5px;
+    border-radius: 4px;
+    box-shadow: 0 2px 4px 0 #f7f7f7;
+    border: 1px solid #f0f0f0;
+    background-color: #fff;
+
+    &-compact {
+      height: 17px
+    }
+  }
+
+  &-resize-handle {
+    position: absolute;
+    left: 0;
+    top: -4px;
+    width: 14px;
+    height: 16px;
+    z-index: 3;
+    background: white;
+
+    &:after,
+    &:before {
+      position: absolute;
+      top: 4px;
+      bottom: 16px;
+      width: 2px;
+      height: 8px;
+      border-radius: 2px;
+      background-color: #d9d9d9;
+      content: ""
+    }
+
+    &-left {
+      cursor: col-resize;
+
+      &:before {
+        left: 4px
+      }
+
+      &:after {
+        right: 4px
       }
     }
 
-    &.right {
-      text-align: right
+
+    &-right {
+      cursor: col-resize;
+
+      &:before {
+        left: 4px
+      }
+
+      &:after {
+        right: 4px
+      }
     }
-
-    &.loose {
-      top: 0
-    }
-  }
-
-
-  .done .dependency-handle .outer {
-    stroke: #d9d9d9
-  }
-
-  .done .dependency-handle .inner {
-    fill: #d9d9d9
-  }
-
-  .done .dependency-handle:hover .inner {
-    fill: #8c8c8c
   }
 
 
 
-}
-
-.overdue {
-  .dependency-handle .outer {
-    stroke: #fcc
+  &-date-text {
+    color: #262626
   }
 
-  .dependency-handle .inner {
-    fill: #fd998f
+  &-date-text,
+  &-label {
+    position: absolute;
+    white-space: nowrap;
+    font-size: 12px;
+    top: -6px
   }
 
-  .dependency-handle:hover .inner {
-    fill: #f87872
-  }
-}
-
-.invalid-date-range {
-  display: none;
-}
-
-
-.resize-bg {
-  position: absolute;
-  left: 0;
-  top: -5px;
-  border-radius: 4px;
-  box-shadow: 0 2px 4px 0 #f7f7f7;
-  border: 1px solid #f0f0f0;
-  background-color: #fff;
-
-  &.loose {
-    height: 25px
+  &-label {
+    overflow: hidden;
+    max-width: 200px;
+    color: #595959;
+    text-overflow: ellipsis;
+    word-break: keep-all;
+    line-height: 16px;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+    height: 16px;
+    cursor: pointer
   }
 
-  &.compact {
-    height: 17px
-  }
+  // &-dependency-handle {
+  //   position: absolute;
+  //   top: -5px;
+  //   left: 0;
+  //   cursor: pointer;
+  //   height: 18px;
+  //   z-index: 1;
+
+  //   &:hover {
+  //     .inner {
+  //       fill: #1b9aee
+  //     }
+  //   }
+
+  //   &.right {
+  //     text-align: right
+  //   }
+
+  //   &.loose {
+  //     top: 0
+  //   }
+  // }
+
+
+  // .done .dependency-handle .outer {
+  //   stroke: #d9d9d9
+  // }
+
+  // .done .dependency-handle .inner {
+  //   fill: #d9d9d9
+  // }
+
+  // .done .dependency-handle:hover .inner {
+  //   fill: #8c8c8c
+  // }
 }
 
-.handle {
-  position: absolute;
-  z-index: 1
-}
+// .overdue {
+//   .dependency-handle .outer {
+//     stroke: #fcc
+//   }
 
-.handle.left {
-  top: 0;
-  bottom: 0;
-  left: -1.5px;
-  border-left: 2px solid transparent;
-  cursor: ew-resize
-}
+//   .dependency-handle .inner {
+//     fill: #fd998f
+//   }
 
-.handle.right {
-  top: 0;
-  bottom: 0;
-  right: -1.5px;
-  border-right: 2px solid transparent;
-  cursor: ew-resize
-}
-
-.handle.top {
-  left: 0;
-  right: 0;
-  top: -1.5px;
-  border-top: 2px solid transparent;
-  cursor: ns-resize
-}
-
-.handle.bottom {
-  left: 0;
-  right: 0;
-  bottom: -1.5px;
-  border-bottom: 2px solid transparent;
-  cursor: ns-resize
-}
-
-.handle.resizing,
-.handle:hover {
-  border-color: #1b9aee
-}
-
-.resize-handle {
-  position: absolute;
-  left: 0;
-  top: -4px;
-  width: 14px;
-  height: 16px;
-  z-index: 3;
-  background: white;
-}
-
-.resize-handle:after,
-.resize-handle:before {
-  position: absolute;
-  top: 4px;
-  bottom: 16px;
-  width: 2px;
-  height: 8px;
-  border-radius: 2px;
-  background-color: #d9d9d9;
-  content: ""
-}
-
-.resize-handle.loose {
-  height: 24px
-}
-
-.resize-handle.loose:after,
-.resize-handle.loose:before {
-  top: 8px
-}
-
-.resize-handle.left {
-  cursor: col-resize
-}
-
-.resize-handle.left:before {
-  left: 4px
-}
-
-.resize-handle.left:after {
-  right: 4px
-}
-
-.resize-handle.right {
-  cursor: col-resize
-}
-
-.resize-handle.right:before {
-  left: 4px
-}
-
-.resize-handle.right:after {
-  right: 4px
-}
-
-.resize-handle > .fill {
-  width: 2px;
-  height: 8px;
-  border-radius: 1px;
-  background-color: #fff
-}
-
-.resize-handle.disabled {
-  cursor: not-allowed
-}
-
-.date-text {
-  color: #262626
-}
-
-.date-text,
-.label {
-  position: absolute;
-  white-space: nowrap;
-  font-size: 12px;
-  top: -6px
-}
-
-.label {
-  overflow: hidden;
-  max-width: 200px;
-  color: #595959;
-  text-overflow: ellipsis;
-  word-break: keep-all;
-  line-height: 16px;
-  -webkit-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
-  user-select: none;
-  height: 16px;
-  cursor: pointer
-}
-
-.label.done {
-  color: #bfbfbf
-}
-
-.label.invisible {
-  color: #bfbfbf;
-  cursor: not-allowed
-}
-
-.label.invisible [data-role=icon] {
-  margin-right: 8px
-}
-
-.label.loose {
-  top: 0;
-  font-size: 14px
-}
+//   .dependency-handle:hover .inner {
+//     fill: #f87872
+//   }
+// }
