--- a/src/components/divider/index.less
+++ b/src/components/divider/index.less
@@ -1,11 +1,101 @@
-.divider {
+@import '../../style/themes/index';
+@divider-prefix-cls: ~'@{gantt-prefix}-divider';
+
+.@{divider-prefix-cls} {
   position: absolute;
   top: 0;
   bottom: 0;
-  cursor: col-resize
+  cursor: col-resize;
+
+  &:hover {
+    hr {
+      border-color: #5365EA;
+
+      &:before {
+        background: #5365EA;
+      }
+    }
+
+    .@{divider-prefix-cls}-icon-wrapper {
+      background-color: #5365EA;
+      border-color: #5365EA;
+      border-top: 0;
+      border-bottom: 0;
+      cursor: pointer;
+
+      &:after {
+        content: "";
+        right: -3px;
+        position: absolute;
+        width: 2px;
+        height: 30px;
+        background-color: transparent
+      }
+
+      .@{divider-prefix-cls}-arrow:after,
+      .@{divider-prefix-cls}-arrow:before {
+        background-color: #fff
+      }
+    }
+  }
+
+
+  & > hr {
+    margin: 0;
+    height: 100%;
+    width: 0;
+    border: none;
+    border-right: 1px solid transparent;
+  }
+
+
+  & > &-icon-wrapper {
+    position: absolute;
+    left: 1px;
+    top: 50%;
+    transform: translateY(-50%);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 14px;
+    height: 30px;
+    border-radius: 0 4px 4px 0;
+    border: 1px solid #f0f0f0;
+    border-left: 0;
+    background-color: #fff;
+  }
+
+  &-arrow:before {
+    bottom: -1px;
+    transform: rotate(30deg)
+  }
+
+  &-arrow:after {
+    top: -1px;
+    transform: rotate(-30deg)
+  }
+
+  &-arrow:after,
+  &-arrow:before {
+    content: "";
+    display: block;
+    position: relative;
+    width: 2px;
+    height: 8px;
+    background-color: #bfbfbf;
+    border-radius: 1px
+  }
+
+  &-arrow&-reverse:before {
+    transform: rotate(-30deg)
+  }
+
+  &-arrow&-reverse:after {
+    transform: rotate(30deg)
+  }
 }
 
-.divider_only > hr:before {
+.@{divider-prefix-cls}_only > hr:before {
   content: '';
   position: absolute;
   border-top: 7px solid white;
@@ -18,93 +108,6 @@
   width: 2px;
 }
 
-.divider:hover hr {
-  border-color: #5365EA;
-
-  &:before {
-    background: #5365EA;
-  }
-}
-
-.divider:hover .icon-wrapper {
-  background-color: #5365EA;
-  border-color: #5365EA;
-  border-top: 0;
-  border-bottom: 0;
-  cursor: pointer;
-}
-
-.divider:hover .icon-wrapper:after {
-  content: "";
-  right: -3px;
-  position: absolute;
-  width: 2px;
-  height: 30px;
-  background-color: transparent
-}
-
-.divider:hover .icon-wrapper .arrow:after,
-.divider:hover .icon-wrapper .arrow:before {
-  background-color: #fff
-}
-
-.divider.vertical-disabled:after {
-  content: none
-}
-
-.divider > hr {
-  margin: 0;
-  height: 100%;
-  width: 0;
-  border: none;
-  border-right: 1px solid transparent;
-}
-
-.divider_only > hr {
+.@{divider-prefix-cls}_only > hr {
   border-color: #A7ADD0;
-}
-
-.divider > .icon-wrapper {
-  position: absolute;
-  left: 1px;
-  top: 50%;
-  transform: translateY(-50%);
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  width: 14px;
-  height: 30px;
-  border-radius: 0 4px 4px 0;
-  border: 1px solid #f0f0f0;
-  border-left: 0;
-  background-color: #fff;
-}
-
-.divider .arrow:before {
-  bottom: -1px;
-  transform: rotate(30deg)
-}
-
-.divider .arrow:after {
-  top: -1px;
-  transform: rotate(-30deg)
-}
-
-.divider .arrow:after,
-.divider .arrow:before {
-  content: "";
-  display: block;
-  position: relative;
-  width: 2px;
-  height: 8px;
-  background-color: #bfbfbf;
-  border-radius: 1px
-}
-
-.divider .arrow.reverse:before {
-  transform: rotate(-30deg)
-}
-
-.divider .arrow.reverse:after {
-  transform: rotate(30deg)
 }
