--- a/src/components/scroll-bar/index.less
+++ b/src/components/scroll-bar/index.less
@@ -1,10 +1,13 @@
-.scroll_bar {
+@import '../../style/themes/index';
+@scroll-bar-prefix-cls: ~'@{gantt-prefix}-scroll_bar';
+
+.@{scroll-bar-prefix-cls} {
   position: absolute;
   bottom: 0;
   left: 16px;
   height: 8px;
 
-  .thumb {
+  &-thumb {
     position: absolute;
     height: 100%;
     border-radius: 4px;
