--- a/src/components/selection-indicator/index.less
+++ b/src/components/selection-indicator/index.less
@@ -1,4 +1,7 @@
-.selection-indicator {
+@import '../../style/themes/index';
+@selection-indicator-prefix-cls: ~'@{gantt-prefix}-selection-indicator';
+
+.@{selection-indicator-prefix-cls} {
   position: absolute;
   width: 100%;
   background: rgba(0, 0, 0, 0.04);
