--- a/src/components/table-body/index.less
+++ b/src/components/table-body/index.less
@@ -1,72 +1,75 @@
-.scrollable {
+@import '../../style/themes/index';
+@table-body-prefix-cls: ~'@{gantt-prefix}-table-body';
+
+.@{table-body-prefix-cls} {
   position: absolute;
   top: 0;
   left: 0;
   overflow: hidden;
-}
 
-.row,
-.border_row {
-  display: flex;
-  align-items: center;
-  position: absolute;
-  width: 100%;
-}
-
-.border_row {
-  height: 100%;
-  pointer-events: none;
-}
-
-
-.cell {
-  position: relative;
-  display: flex;
-  align-items: center;
-  border-right: 1px solid #f0f0f0;
-  height: 100%;
-  color: rgba(0, 0, 0, 0.65);
-  user-select: none;
-  padding: 0 8px;
-}
-
-.ellipsis {
-  flex: 1;
-  overflow: hidden;
-  text-overflow: ellipsis;
-  white-space: nowrap;
-}
-
-.row-indentation {
-  height: 100%;
-  position: absolute;
-  left: 0;
-  pointer-events: none;
-
-  &:before {
-    content: '';
-    position: absolute;
-    height: 100%;
-    left: 0;
-    width: 1px;
-    bottom: 0;
-    background-color: #D9E6F2;
-  }
-
-}
-
-.row-indentation-both {
-  &:after {
-    content: '';
+  &-row,
+  &-border_row {
+    display: flex;
+    align-items: center;
     position: absolute;
     width: 100%;
-    bottom: 0;
-    left: 0;
-    height: 1px;
-    background-color: #D9E6F2;
   }
-}
 
-.row-indentation-hidden {
-  visibility: hidden;
+  &-border_row {
+    height: 100%;
+    pointer-events: none;
+  }
+
+
+  &-cell {
+    position: relative;
+    display: flex;
+    align-items: center;
+    border-right: 1px solid #f0f0f0;
+    height: 100%;
+    color: rgba(0, 0, 0, 0.65);
+    user-select: none;
+    padding: 0 8px;
+  }
+
+  &-ellipsis {
+    flex: 1;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+  }
+
+  &-row-indentation {
+    height: 100%;
+    position: absolute;
+    left: 0;
+    pointer-events: none;
+
+    &:before {
+      content: '';
+      position: absolute;
+      height: 100%;
+      left: 0;
+      width: 1px;
+      bottom: 0;
+      background-color: #D9E6F2;
+    }
+
+  }
+
+  &-row-indentation-both {
+    &:after {
+      content: '';
+      position: absolute;
+      width: 100%;
+      bottom: 0;
+      left: 0;
+      height: 1px;
+      background-color: #D9E6F2;
+    }
+  }
+
+  &-row-indentation-hidden {
+    visibility: hidden;
+  }
 }
