--- a/src/components/table-header/index.less
+++ b/src/components/table-header/index.less
@@ -1,54 +1,44 @@
-.scrollable {
+@import '../../style/themes/index';
+@table-header-prefix-cls: ~'@{gantt-prefix}-table-header';
+
+.@{table-header-prefix-cls} {
   position: absolute;
   top: 0;
   left: 0;
-  overflow: hidden
-}
-
-.body,
-.head {
-  position: relative
-}
-
-.foot,
-.row {
-  position: absolute;
-  left: 0;
-  display: flex
-}
-
-.row {
-  transition: height 0.3s;
-  width: 100%;
-}
-
-.row.done {
-  color: #bfbfbf
-}
-
-.row.done [class^=body-cell],
-.row.done input {
-  color: #bfbfbf !important
-}
-
-.cell {
-  position: relative;
-  display: flex;
-  border-right: 1px solid #f0f0f0
-}
-.head-cell {
-  display: flex;
-  flex: 1;
-  align-items: center;
   overflow: hidden;
-  padding: 0 12px;
-  // color: #8c8c8c;
-  user-select: none;
-}
 
-.ellipsis {
-  flex: 1;
-  overflow: hidden;
-  text-overflow: ellipsis;
-  white-space: nowrap
+  &-head {
+    position: relative
+  }
+
+  &-row {
+    position: absolute;
+    left: 0;
+    display: flex;
+    transition: height 0.3s;
+    width: 100%;
+  }
+
+  &-cell {
+    position: relative;
+    display: flex;
+    border-right: 1px solid #f0f0f0
+  }
+
+  &-head-cell {
+    display: flex;
+    flex: 1;
+    align-items: center;
+    overflow: hidden;
+    padding: 0 12px;
+    // color: #8c8c8c;
+    user-select: none;
+  }
+
+  &-ellipsis {
+    flex: 1;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap
+  }
 }
