--- a/src/components/today/index.less
+++ b/src/components/today/index.less
@@ -1,4 +1,6 @@
-.today {
+@import '../../style/themes/index';
+
+.@{gantt-prefix}-today {
   position: absolute;
   top: 0;
   background: #3f51b5;
@@ -12,7 +14,7 @@
   pointer-events: none;
 }
 
-.today_line {
+.@{gantt-prefix}-today_line {
   width: 1px;
   background: #3f51b5;
   margin-left: 15px;
