feat: 文档增加控制项

--- a/src/components/task-bar-thumb/index.less
+++ b/src/components/task-bar-thumb/index.less
@@ -13,8 +13,8 @@
   word-break: keep-all;
   line-height: 16px;
   user-select: none;
-  height: 16px;
   font-size: 12px;
+  padding-right: 16px;
 
   &-left {
     transform: translate(0);
